# crates_io_og_image

./: Cargo.toml  LICENSE-APACHE  README.md
.github/: renovate.json5
.github/workflows/: ci.yml  release.yml
examples/: test_generator.rs
src/: env.rs  error.rs  lib.rs
src/snapshots/: crates_io_og_image__tests__docs_rs_theme.snap
src/typst/: assets.rs  compiler.rs  diagnostics.rs  fonts.rs  memo.rs  mod.rs
template/: og-image.typ
tests/: generate.rs
tests/snapshots/: generate__404-avatar.snap
