[package]
name = "crates_io_og_image"
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "OpenGraph image generation for crates.io"
repository = "https://github.com/rust-lang/crates_io_og_image"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"

[lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"
unused = "warn"

[lints.rustdoc]
unescaped_backticks = "warn"

[dependencies]
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tempfile = "3.21.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["process", "fs"] }
tracing = "0.1.41"

[dev-dependencies]
insta = "=1.43.2"
mockito = "=1.7.0"
tokio = { version = "=1.47.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "=0.3.20", features = ["env-filter", "fmt"] }

[package.metadata.release]
sign-commit = true
sign-tag = true
pre-release-commit-message = "Release v{{version}}"
tag-message = ""
publish = false
